--- a/src/main/resources/templates/layouts/static-layout.html
+++ b/src/main/resources/templates/layouts/static-layout.html
@@ -5,8 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Book library service</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/dark-mode.css" rel="stylesheet"/>
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
+    <link rel="stylesheet" href="/css/dark-mode.css"/>
 </head>
 <body>
 <div class="container pt-3">
@@ -57,7 +57,7 @@
         </div>
     </div>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<script th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
 <script src="/js/dark-mode-switch.js"></script>
 </body>
 </html>
