--- a/src/main/resources/templates/layouts/static-layout.html
+++ b/src/main/resources/templates/layouts/static-layout.html
@@ -27,7 +27,7 @@
             </div>
         </div>
         <div class="col-sm-10">
-            <p class="display-5 text-end">Library service</p>
+            <p class="display-5 text-end">Book library service</p>
         </div>
     </div>
 </div>
