Introduce new book adding

--- a/src/main/resources/templates/layouts/static-layout.html
+++ b/src/main/resources/templates/layouts/static-layout.html
@@ -42,6 +42,8 @@
                        th:href="@{/available}">Show available books</a>
                     <a id="borrowedBooksButton" class="list-group-item list-group-item-action"
                        th:href="@{/borrowed}">Show borrowed books</a>
+                    <a id="addBookButton" class="list-group-item list-group-item-action"
+                       th:href="@{/add}">Add new book</a>
                 </div>
             </div>
         </div>
