--- a/src/main/resources/templates/borrowed-books.html
+++ b/src/main/resources/templates/borrowed-books.html
@@ -32,13 +32,7 @@
             </tr>
             </tbody>
         </table>
-        <nav aria-label="Page navigation" th:if="${pageNumbers.size() > 1}">
-            <ul class="pagination justify-content-center">
-                <li class="page-item" th:each="pageNumber : ${pageNumbers}">
-                    <a class="page-link" th:href="@{/borrowed(page=${pageNumber - 1})}" th:text=${pageNumber}></a>
-                </li>
-            </ul>
-        </nav>
+        <div th:replace="~{fragments/pagination-nav :: pagination-nav(pageLink='/borrowed')}"></div>
     </div>
 </section>
 </body>
