--- a/src/main/resources/templates/layouts/static-layout.html
+++ b/src/main/resources/templates/layouts/static-layout.html
@@ -43,7 +43,7 @@
                     <a id="borrowedBooksButton" class="list-group-item list-group-item-action"
                        th:href="@{/borrowed}">Show borrowed books</a>
                     <a id="addBookButton" class="list-group-item list-group-item-action"
-                       th:href="@{/create}">Add new book</a>
+                       th:href="@{/addBook}">Add new book</a>
                 </div>
             </div>
         </div>
