--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,6 +29,7 @@
                 <td class="table-success" th:if="${!item.borrowed}" th:text="${item.author}" data-bs-toggle="tooltip"
                     data-bs-placement="right" title="Available"></td>
                 <td class="table-success" th:if="${!item.borrowed}">
+                    <div th:replace="~{fragments/button-update :: button-update}"></div>
                     <div th:replace="~{fragments/button-delete :: button-delete}"></div>
                 </td>
                 <td class="table-danger" th:if="${item.borrowed}" th:text="${item.name}" data-bs-toggle="tooltip"
@@ -36,6 +37,7 @@
                 <td class="table-danger" th:if="${item.borrowed}" th:text="${item.author}" data-bs-toggle="tooltip"
                     data-bs-placement="right" title="Borrowed"></td>
                 <td class="table-danger" th:if="${item.borrowed}">
+                    <div th:replace="~{fragments/button-update :: button-update}"></div>
                     <div th:replace="~{fragments/button-delete :: button-delete}"></div>
                 </td>
             </tr>
