--- a/src/main/resources/templates/save-book.html
+++ b/src/main/resources/templates/save-book.html
@@ -10,6 +10,7 @@
 <body>
 <section layout:fragment="dynamic-content">
     <form class="row g-2" th:method="POST" th:object="${availableBookDto}" th:action="@{/save}">
+        <input type="hidden" th:field="*{id}"/>
         <div class="col-12">
             <label class="form-label" for="bookName">Book name</label>
             <input id="bookName" class="form-control" type="text" aria-describedby="bookNameHelp" th:field="*{name}"
