--- a/src/main/resources/templates/fragments/button-delete.html
+++ b/src/main/resources/templates/fragments/button-delete.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org">
-<a th:fragment="button-delete" th:href="@{/delete/{id}(id=${item.id})}"
+<a th:fragment="button-delete" th:href="@{/delete(bookId=${item.id})}"
    class="btn btn-danger btn-sm"
    onclick="if (!(confirm('Are you sure you want to delete this book?'))) return false">
     Delete
