--- a/src/main/resources/templates/save-book.html
+++ b/src/main/resources/templates/save-book.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/static-layout}"
-      th:with="cardHeader='Add new book'" xmlns="http://www.w3.org/1999/html">
+      th:with="cardHeader='Save book'" xmlns="http://www.w3.org/1999/html">
 <head>
     <title>Library service</title>
 </head>
