--- a/src/main/resources/static/css/dark-mode.css
+++ b/src/main/resources/static/css/dark-mode.css
@@ -74,6 +74,30 @@
   border-color: #2c4866;
 }
 
+[data-theme="dark"] .btn-info {
+  color: #fff;
+  background-color: #3498db;
+  border-color: #3498db;
+}
+
+[data-theme="dark"] .btn-info:hover {
+  color: #fff;
+  background-color: #2c81ba;
+  border-color: #2a7aaf;
+}
+
+[data-theme="dark"] .btn-danger {
+  color: #fff;
+  background-color: #e74c3c;
+  border-color: #e74c3c;
+}
+
+[data-theme="dark"] .btn-danger:hover {
+  color: #fff;
+  background-color: #c44133;
+  border-color: #b93d30;
+}
+
 [data-theme="dark"] .form-check-input {
   background-color: #375a7f;
   border-color: #375a7f;
@@ -85,6 +109,22 @@
   --bs-table-hover-color: #eee;
   color: #eee;
   border-color: #555;
+}
+
+[data-theme="dark"] .table-warning {
+  --bs-table-bg: #443812;
+  --bs-table-striped-bg: #403511;
+  --bs-table-striped-color: #fff;
+  color: #fff;
+  border-color: #403511;
+}
+
+[data-theme="dark"] .table-success {
+  --bs-table-bg: #273116;
+  --bs-table-striped-bg: #222b13;
+  --bs-table-striped-color: #fff;
+  color: #fff;
+  border-color: #222b13;
 }
 
 [data-theme="dark"] .page-link {
