feat: Improve security configuration

--- a/app/src/main/resources/templates/fragments/button.html
+++ b/app/src/main/resources/templates/fragments/button.html
@@ -6,4 +6,5 @@
    onclick="if (!(confirm('Are you sure you want to delete this book?'))) return false">
     Delete
 </a>
+<a th:fragment="button-update" th:href="@{/updateBook(bookId=${item.id})}" class="btn btn-info btn-sm">Update</a>
 </html>
