--- a/app/src/main/resources/templates/available-books.html
+++ b/app/src/main/resources/templates/available-books.html
@@ -2,37 +2,51 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layouts/static-layout}"
-      th:with="cardHeader='Available books'" xmlns="http://www.w3.org/1999/html">
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      layout:decorate="~{layouts/basic-layout}"
+      xmlns="http://www.w3.org/1999/html">
 <head>
     <title>Library service</title>
 </head>
 <body>
-<section layout:fragment="dynamic-content">
-    <div class="alert alert-warning" role="alert" th:if="${!found}">
-        <strong>Warning:</strong>
-        <span>No available books have been found.</span>
-    </div>
-    <div th:if="${found}">
-        <table aria-label="Available books" class="table table-striped">
-            <thead>
-            <tr>
-                <th scope="col">Name</th>
-                <th scope="col">Author</th>
-                <th scope="col">Action</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="item : ${books.content}">
-                <td th:text="${item.name}"></td>
-                <td th:text="${item.author}"></td>
-                <td>
-                    <a th:href="@{/borrowBook(bookId=${item.id})}" class="btn btn-info btn-sm">Borrow</a>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-        <div th:replace="~{fragments/pagination-nav :: pagination-nav(pageLink='/available')}"></div>
+<section layout:fragment="basic-content">
+    <div class="row">
+        <div th:replace="~{fragments/navigation :: toggle-pane}"></div>
+        <div class="col-sm-10">
+            <div class="card">
+                <div class="card-header">
+                    <h5>Available books</h5>
+                </div>
+                <div class="card-body">
+                    <div class="alert alert-warning" role="alert" th:if="${!found}">
+                        <strong>Warning:</strong>
+                        <span>No available books have been found.</span>
+                    </div>
+                    <div th:if="${found}">
+                        <table aria-label="Available books" class="table table-striped">
+                            <thead>
+                            <tr>
+                                <th scope="col">Name</th>
+                                <th scope="col">Author</th>
+                                <th scope="col" sec:authorize="hasRole('ROLE_ADMIN')">Action</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="item : ${books.content}">
+                                <td th:text="${item.name}"></td>
+                                <td th:text="${item.author}"></td>
+                                <td sec:authorize="hasRole('ROLE_ADMIN')">
+                                    <a th:href="@{/borrowBook(bookId=${item.id})}"
+                                       class="btn btn-info btn-sm">Borrow</a>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <div th:replace="~{fragments/navigation :: pagination-nav(pageLink='/available')}"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 </body>
