--- a/app/src/main/resources/templates/borrow-book.html
+++ b/app/src/main/resources/templates/borrow-book.html
@@ -2,41 +2,53 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layouts/static-layout}"
-      th:with="cardHeader='Borrow book'" xmlns="http://www.w3.org/1999/html">
+      layout:decorate="~{layouts/basic-layout}"
+      xmlns="http://www.w3.org/1999/html">
 <head>
     <title>Library service</title>
 </head>
 <body>
-<section layout:fragment="dynamic-content">
-    <form class="row g-2" th:method="POST" th:object="${borrowedDto}" th:action="@{/borrow}">
-        <input type="hidden" th:field="*{bookId}"/>
-        <div class="col-12">
-            <label class="form-label" for="firstName">First name</label>
-            <input id="firstName" class="form-control" type="text" aria-describedby="firstNameHelp"
-                   th:field="*{firstName}"
-                   th:classappend="${#fields.hasErrors('firstName')}? 'is-invalid'">
-            <div id="firstNameHelp" class="form-text">Client's first name.</div>
+<section layout:fragment="basic-content">
+    <div class="row">
+        <div th:replace="~{fragments/navigation :: toggle-pane}"></div>
+        <div class="col-sm-10">
+            <div class="card">
+                <div class="card-header">
+                    <h5>Borrow book</h5>
+                </div>
+                <div class="card-body">
+                    <form class="row g-2" th:method="POST" th:object="${borrowedDto}" th:action="@{/borrow}">
+                        <input type="hidden" th:field="*{bookId}"/>
+                        <div class="col-12">
+                            <label class="form-label" for="firstName">First name</label>
+                            <input id="firstName" class="form-control" type="text" aria-describedby="firstNameHelp"
+                                   th:field="*{firstName}"
+                                   th:classappend="${#fields.hasErrors('firstName')}? 'is-invalid'">
+                            <div id="firstNameHelp" class="form-text">Client's first name.</div>
+                        </div>
+                        <div class="col-12">
+                            <label class="form-label" for="lastName">Last name</label>
+                            <input id="lastName" class="form-control" type="text" aria-describedby="lastNameHelp"
+                                   th:field="*{lastName}"
+                                   th:classappend="${#fields.hasErrors('lastName')}? 'is-invalid'">
+                            <div id="lastNameHelp" class="form-text">Client's last name.</div>
+                        </div>
+                        <div>
+                            <label for="fromDate">Date of borrow</label>
+                            <input id="fromDate" class="form-control" type="date" aria-describedby="fromDateHelp"
+                                   th:field="*{from}"
+                                   th:classappend="${#fields.hasErrors('from')}? 'is-invalid'">
+                            <script>fromDate.value = new Date().toJSON().split('T')[0]</script>
+                            <div id="fromDateHelp" class="form-text">Date of borrow can't be later than today.</div>
+                        </div>
+                        <div class="col-12">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
-        <div class="col-12">
-            <label class="form-label" for="lastName">Last name</label>
-            <input id="lastName" class="form-control" type="text" aria-describedby="lastNameHelp"
-                   th:field="*{lastName}"
-                   th:classappend="${#fields.hasErrors('lastName')}? 'is-invalid'">
-            <div id="lastNameHelp" class="form-text">Client's last name.</div>
-        </div>
-        <div>
-            <label for="fromDate">Date of borrow</label>
-            <input id="fromDate" class="form-control" type="date" aria-describedby="fromDateHelp"
-                   th:field="*{from}"
-                   th:classappend="${#fields.hasErrors('from')}? 'is-invalid'">
-            <script>fromDate.value = new Date().toJSON().split('T')[0]</script>
-            <div id="fromDateHelp" class="form-text">Date of borrow can't be later than today.</div>
-        </div>
-        <div class="col-12">
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
-    </form>
+    </div>
 </section>
 </body>
 </html>
