--- a/app/src/main/resources/templates/error/405.html
+++ b/app/src/main/resources/templates/error/405.html
@@ -2,16 +2,27 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layouts/static-layout}"
-      th:with="cardHeader='Method not allowed'">
+      layout:decorate="~{layouts/basic-layout}">
 <head>
     <title>Library service</title>
 </head>
 <body>
-<section layout:fragment="dynamic-content">
-    <div class="alert alert-danger" role="alert">
-        <strong>Error:</strong>
-        <span>Method not allowed.</span>
+<section layout:fragment="basic-content">
+    <div class="row">
+        <div th:replace="~{fragments/navigation :: toggle-pane}"></div>
+        <div class="col-sm-10">
+            <div class="card">
+                <div class="card-header">
+                    <h5>Method not allowed</h5>
+                </div>
+                <div class="card-body">
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error:</strong>
+                        <span>Method not allowed.</span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 </body>
