--- a/app/src/main/resources/templates/login.html
+++ b/app/src/main/resources/templates/login.html
@@ -43,17 +43,17 @@
                                 </button>
                             </div>
                         </div>
-                        <div class="form-outline">
+                        <div class="form-outline col-md-6">
                             <button type="submit" class="btn btn-primary" th:href="@{/oauth2/authorization/cognito}">
                                 Sign in
                             </button>
                         </div>
+                        <div class="form-outline col-md-6">
+                            <button type="submit" class="btn btn-primary" th:href="@{/register}">
+                                Sign up
+                            </button>
+                        </div>
                     </form>
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" th:href="@{/register}">Sign up</a>
-                        </li>
-                    </ul>
                 </div>
             </div>
         </div>
