Add sign up link

--- a/app/src/main/resources/templates/layouts/basic-layout.html
+++ b/app/src/main/resources/templates/layouts/basic-layout.html
@@ -39,6 +39,7 @@
             </div>
         </div>
         <div class="col-sm-5" sec:authorize="isAnonymous()">
+            <a th:href="@{/register}">Sign up</a>
             <p class="display-5 text-end"></p>
         </div>
         <div class="col-sm-5">
