--- a/app/src/main/resources/templates/login.html
+++ b/app/src/main/resources/templates/login.html
@@ -43,15 +43,8 @@
                                 </button>
                             </div>
                         </div>
-                        <div class="form-outline col-md-6">
-                            <button type="submit" class="btn btn-primary" th:href="@{/oauth2/authorization/cognito}">
-                                Sign in
-                            </button>
-                        </div>
-                        <div class="form-outline col-md-6">
-                            <button type="submit" class="btn btn-primary" th:href="@{/register}">
-                                Sign up
-                            </button>
+                        <div class="form-outline">
+                            <button type="submit" class="btn btn-primary">Submit</button>
                         </div>
                     </form>
                 </div>
