--- a/app/src/main/resources/templates/register.html
+++ b/app/src/main/resources/templates/register.html
@@ -13,7 +13,7 @@
         <div class="col-sm-4">
             <div class="card">
                 <div class="card-header">
-                    <h5>Register</h5>
+                    <h5>Sign up</h5>
                 </div>
                 <div class="card-body">
                     <form th:action="@{/register}" th:object="${registration}" method="post">
