--- a/app/src/main/resources/static/css/dark-mode.css
+++ b/app/src/main/resources/static/css/dark-mode.css
@@ -142,3 +142,12 @@
   color: #375a7f;
   background-color: #444;
 }
+
+[data-theme="dark"] .form-text {
+  color: #888;
+}
+
+[data-theme="dark"] .text-muted {
+  --bs-text-opacity: 1;
+  color: #888 !important;
+}
